--- a/package.json
+++ b/package.json
@@ -1,8 +1,11 @@
 {
   "dependencies": {
-    "axios": "^1.10.0",
-    "dotenv": "^16.5.0",
+    "app": "^0.1.0",
+    "axios": "^1.11.0",
+    "cors": "^2.8.5",
+    "dotenv": "^16.6.1",
     "express": "^5.1.0",
-    "mongoose": "^8.16.2"
+    "mongoose": "^8.17.0",
+    "port": "^0.8.1"
   }
 }
