--- a/package.json
+++ b/package.json
@@ -1,4 +1,12 @@
 {
+  "name": "projeto-carro-main",
+  "version": "1.0.0",
+  "description": "Projeto de garagem inteligente com Express e MongoDB",
+  "main": "server.js",
+  "scripts": {
+    "start": "node server.js",
+    "dev": "nodemon server.js"
+  },
   "dependencies": {
     "app": "^0.1.0",
     "axios": "^1.11.0",
@@ -7,5 +15,8 @@
     "express": "^5.1.0",
     "mongoose": "^8.17.0",
     "port": "^0.8.1"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.10"
   }
 }
