--- a/package.json
+++ b/package.json
@@ -1,29 +1,27 @@
 {
-  "name": "garagem-inteligente-auth",
-  "version": "5.0.0",
-  "description": "Aplicação Garagem Inteligente com autenticação de usuário.",
+  "name": "garagem-inteligente",
+  "version": "4.1.0",
+  "description": "Aplicação Garagem Inteligente com frontend e backend proxy para API de clima.",
   "main": "server.js",
-  "type": "commonjs",
+  "type": "module",
   "scripts": {
     "start": "node server.js",
-    "dev": "node --watch server.js"
+    "dev": "node --watch server.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
     "garagem",
-    "autenticacao",
+    "inteligente",
+    "frontend",
+    "backend",
     "nodejs",
-    "express",
-    "mongoose"
+    "express"
   ],
   "author": "Seu Nome",
   "license": "ISC",
   "dependencies": {
-    "axios": "^1.6.8",
-    "bcryptjs": "^2.4.3",
-    "cors": "^2.8.5",
-    "dotenv": "^16.4.5",
-    "express": "^4.19.2",
-    "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.3.2"
+    "axios": "^1.6.8",  
+    "dotenv": "^16.4.5", 
+    "express": "^4.19.2" 
   }
 }
