--- a/package.json
+++ b/package.json
@@ -1,27 +1,21 @@
 {
-  "name": "garagem-inteligente",
-  "version": "4.1.0",
-  "description": "Aplicação Garagem Inteligente com frontend e backend proxy para API de clima.",
+  "name": "projeto-carro-main-corrigido",
+  "version": "1.0.0",
+  "description": "Aplicação de Garagem Inteligente com backend completo.",
   "main": "server.js",
-  "type": "module",
   "scripts": {
     "start": "node server.js",
-    "dev": "node --watch server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "node --watch server.js"
   },
-  "keywords": [
-    "garagem",
-    "inteligente",
-    "frontend",
-    "backend",
-    "nodejs",
-    "express"
-  ],
   "author": "Seu Nome",
   "license": "ISC",
   "dependencies": {
-    "axios": "^1.6.8",  
-    "dotenv": "^16.4.5", 
-    "express": "^4.19.2" 
+    "axios": "^1.6.8",
+    "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.3.2"
   }
 }
